# commonroad-automatic-labeling

./: .gitignore  .gitlab-ci.yml  .gitmodules  README.md  mkdocs.yml  pyproject.toml
commonroad_labeling/common/: base.py  general.py  tag.py
commonroad_labeling/criticality/: cm_analyzer.py  cm_computer.py  crime_output.py  crit_util.py  trajectory_inserter.py
commonroad_labeling/ego_vehicle_goal/: ego_vehicle_goal_intersection.py
commonroad_labeling/road_configuration/: lanelet_layout.py  obstacle.py  traffic_sign.py
docs/: cm_computer.md  common.md  crime_output.md  criticality_analyzer.md  development.md  ego_vehicle_goal.md  example.md  index.md  road_configuration_route.md  road_configuration_scenario.md  trajectory_inserter.md
docs/source/: conf.py  index.rst
scenarios/: DEU_Hoerstein-1_1_I-1.cr.xml  USA_Lanker-1_3_T-1.cr.xml  USA_US101-5_1_T-1.xml
scenarios/MONA/: C-DEU_MONAEast-2_1360_T-1439.xml  C-DEU_MONAEast-2_1600_T-1679.xml  C-DEU_MONAEast-2_480_T-559.xml  C-DEU_MONAEast-2_960_T-1039.xml  C-DEU_MONAMerge-2_1360_T-1439.xml  C-DEU_MONAMerge-2_1600_T-1679.xml  C-DEU_MONAMerge-2_1920_T-1999.xml  C-DEU_MONAMerge-2_2000_T-2079.xml  C-DEU_MONAMerge-2_2160_T-2239.xml  C-DEU_MONAMerge-2_2320_T-2365.xml  C-DEU_MONAMerge-2_720_T-799.xml  C-DEU_MONAWest-2_1120_T-1199.xml  C-DEU_MONAWest-2_1600_T-1679.xml  C-DEU_MONAWest-2_2240_T-2319.xml  C-DEU_MONAWest-2_320_T-399.xml  C-DEU_MONAWest-2_480_T-559.xml  C-DEU_MONAWest-2_560_T-639.xml
scenarios/inD_converted/: C-DEU_AachenBendplatz-1_141040_T-1119.xml  C-DEU_AachenBendplatz-1_141120_T-1199.xml  C-DEU_AachenBendplatz-1_141200_T-1279.xml  C-DEU_AachenBendplatz-1_141280_T-1359.xml  C-DEU_AachenBendplatz-1_141360_T-1439.xml  C-DEU_AachenBendplatz-1_141440_T-1519.xml  C-DEU_AachenBendplatz-1_141520_T-1599.xml  C-DEU_AachenBendplatz-1_141600_T-1679.xml  C-DEU_AachenBendplatz-1_14160_T-239.xml  C-DEU_AachenBendplatz-1_141760_T-1839.xml  C-DEU_AachenBendplatz-1_141920_T-1999.xml  C-DEU_AachenBendplatz-1_142000_T-2079.xml  C-DEU_AachenBendplatz-1_142080_T-2159.xml  C-DEU_AachenBendplatz-1_142160_T-2239.xml  C-DEU_AachenBendplatz-1_142240_T-2319.xml  C-DEU_AachenBendplatz-1_142320_T-2399.xml  C-DEU_AachenBendplatz-1_14240_T-319.xml  C-DEU_AachenBendplatz-1_14320_T-399.xml  C-DEU_AachenBendplatz-1_14400_T-479.xml  (+7 more)
scripts/: criticality_analyzer_usage.py  criticality_computer_usage.py  criticality_usage.py  usage.py
tests/: run_tests.py  util_tests.py
(+96 files in other folders)
