[tool.poetry]
name = "commonroad-labeling"
version = "0.1.0"
description = "Automatic labeling of CommonRoad scenarios."
authors = ["Florian Finkeldei <florian.finkeldei@tum.de>", "Dzan Tabakovic <dzan.tabakovic@tum.de>"]
readme = "README.md"
packages = [{include = "commonroad_labeling"}, { include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.10"
commonroad-io = "^2023.3"
commonroad-route-planner = "^2022.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=1.3.6"
graphviz = ">=0.3"
sphinx-autodoc-typehints = ">=1.3.0"
sphinx_rtd_theme = ">=0.4.1"
sphinx-gallery = ">=0.2.0"
ipython = ">=6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
